--- a/gulp/package.json
+++ b/gulp/package.json
@@ -21,7 +21,11 @@
     "gulp-embedlr": "^0.5.2",
     "gulp-html-replace": "^1.4.5",
     "gulp-if": "^1.2.5",
+    "gulp-less": "^3.0.3",
     "gulp-livereload": "^3.8.0",
+    "gulp-minify-html": "^1.0.2",
+    "gulp-replace": "^0.5.3",
+    "gulp-s3": "^0.3.0",
     "gulp-useref": "^1.1.2",
     "gulp-watch": "^4.2.4"
   }
