--- a/gulp/package.json
+++ b/gulp/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "del": "^1.2.0",
     "gulp-clean": "^0.3.1",
+    "gulp-connect": "^2.2.0",
     "gulp-embedlr": "^0.5.2",
     "gulp-html-replace": "^1.4.5",
     "gulp-if": "^1.2.5",
