--- a/gulp/package.json
+++ b/gulp/package.json
@@ -12,6 +12,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-minify-css": "^1.1.1",
     "gulp-replace": "^0.5.3",
+    "gulp-s3": "^0.3.0",
     "gulp-server-livereload": "^1.3.0",
     "gulp-uglify": "^1.2.0"
   },
@@ -28,6 +29,7 @@
     "gulp-replace": "^0.5.3",
     "gulp-s3": "^0.3.0",
     "gulp-useref": "^1.1.2",
-    "gulp-watch": "^4.2.4"
+    "gulp-watch": "^4.2.4",
+    "yargs": "^3.23.0"
   }
 }
