--- a/gulp/package.json
+++ b/gulp/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "del": "^1.2.0",
+    "gulp-awspublish": "^3.0.1",
     "gulp-clean": "^0.3.1",
     "gulp-connect": "^2.2.0",
     "gulp-embedlr": "^0.5.2",
@@ -30,6 +31,7 @@
     "gulp-s3": "^0.3.0",
     "gulp-useref": "^1.1.2",
     "gulp-watch": "^4.2.4",
+    "run-sequence": "^1.1.4",
     "yargs": "^3.23.0"
   }
 }
