--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
-    "gulp": "^3.8.11"
+    "gulp": "^3.8.11",
+    "gulp-if": "^2.0.1",
+    "gulp-util": "^3.0.7"
   }
 }
