--- a/gulp/package.json
+++ b/gulp/package.json
@@ -11,11 +11,17 @@
     "gulp": "^3.8.11",
     "gulp-awspublish": "^3.0.1",
     "gulp-concat": "^2.5.2",
-    "gulp-minify-css": "^1.1.1",
-    "gulp-replace": "^0.5.3",
+    "gulp-connect": "^2.3.1",
+    "gulp-less": "^3.1.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-replace": "^0.5.4",
     "gulp-s3": "^0.3.0",
     "gulp-server-livereload": "^1.3.0",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.5.4",
+    "gulp-useref": "^1.3.0",
+    "gulp-watch": "^4.3.9",
+    "yargs": "^3.32.0"
   },
   "dependencies": {
     "del": "^1.2.0",
