--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
+    "file-saver": "^1.3.3",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
   },
