--- a/gulp/package.json
+++ b/gulp/package.json
@@ -25,21 +25,23 @@
   },
   "dependencies": {
     "del": "^1.2.0",
+    "fs": "0.0.1-security",
     "gulp-awspublish": "^3.0.1",
     "gulp-clean": "^0.3.1",
-    "gulp-connect": "^2.2.0",
+    "gulp-connect": "^2.3.1",
     "gulp-embedlr": "^0.5.2",
     "gulp-gzip": "^1.2.0",
     "gulp-html-replace": "^1.4.5",
     "gulp-if": "^1.2.5",
-    "gulp-less": "^3.0.3",
+    "gulp-less": "^3.3.2",
     "gulp-livereload": "^3.8.0",
-    "gulp-minify-html": "^1.0.2",
-    "gulp-replace": "^0.5.3",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-replace": "^0.5.4",
     "gulp-s3": "^0.3.0",
     "gulp-useref": "^1.1.2",
-    "gulp-watch": "^4.2.4",
+    "gulp-watch": "^4.3.11",
     "run-sequence": "^1.1.4",
-    "yargs": "^3.23.0"
+    "yargs": "^3.32.0"
   }
 }
