--- a/gulp/package.json
+++ b/gulp/package.json
@@ -8,7 +8,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.8.11",
+    "gulp": "^3.9.1",
     "gulp-awspublish": "^3.0.1",
     "gulp-concat": "^2.5.2",
     "gulp-connect": "^2.3.1",
@@ -41,6 +41,7 @@
     "gulp-s3": "^0.3.0",
     "gulp-useref": "^1.1.2",
     "gulp-watch": "^4.3.11",
+    "natives": "^1.1.6",
     "run-sequence": "^1.1.4",
     "yargs": "^3.32.0"
   }
